# OOP-Laboratory-Work

./: .gitignore  README.md
.devcontainer/: Dockerfile  devcontainer.json
Lab_n1/: CMakeLists.txt  README.md  function.cpp  function.hpp  main.cpp  tests.txt
Lab_n1/include/: function.hpp
Lab_n1/src/: function.cpp
Lab_n1/test/: tests.cpp  tests.txt
